--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "cryptoverse_app",
   "version": "0.1.0",
   "private": true,
+  "description": "Cryptoverse App",
+  "author": "Nick Miriad",
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "@reduxjs/toolkit": "^1.7.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -10,9 +14,19 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "antd": "^4.18.6",
+    "axios": "^0.25.0",
+    "chart.js": "^3.7.0",
+    "html-react-parser": "^1.4.8",
+    "millify": "^4.0.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "sass": "^1.49.7",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
