--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.25.0",
     "chart.js": "^3.7.0",
     "html-react-parser": "^1.4.8",
+    "lodash": "^4.17.21",
     "millify": "^4.0.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
@@ -56,6 +57,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.178",
     "@types/uuid": "^8.3.4"
   }
 }
